# gitamicus

./: .gitignore  Cargo.toml  README.md  app.css  libgraph.rlib  test_syntax
locales/de-DE/: main.ftl
locales/en-US/: main.ftl
src/: app.rs  main.rs  ui.rs
src-tauri/: tauri.conf.json
src/git/: graph.rs  mod.rs
src/i18n/: mod.rs
