[package]
name = "gitamicus"
version = "0.1.0"
edition = "2021"
authors = ["el-choco"]
description = "GitAmicus"

[dependencies]
dioxus = { version = "0.5", features = ["desktop"] }
dioxus-desktop = "0.5"
git2 = "0.19"
chrono = "0.4"
fluent = "0.16"
unic-langid = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
log = "0.4"
env_logger = "0.11"
rfd = "0.14"
sys-locale = "0.3"
time = { version = "0.3", features = ["formatting", "local-offset"] }